refactor(scoringConfig): Clarify default scoring parameter handling (#5120)
* little changes

* cleanup config

* simplify code

* use new method to get or create default mode parameters

* use methods for default values in ScoringConfigGroup

* simplify code

* remove methods for direct access to subpopulation-specific scoring parameters

* clean up

* use new methods for adding or getting ScoringParameterSet instances in ScoringConfigGroup

* simplify

* add comment

* clarify setting of default values

* fix test

* update comment