@@ -83,7 +83,7 @@ public class AdvancedMarginalCongestionPricingIT {
 		activityParams.setOpeningTime(7 * 3600.);
 		activityParams.setClosingTime(18 * 3600.);
 
-		plansCalcScoreConfigGroup.addActivityParams(activityParams);
+		plansCalcScoreConfigGroup.addDefaultActivityParams(activityParams);
 		plansCalcScoreConfigGroup.setDefaultEarlyDeparture_utils_hr(0.);
 		plansCalcScoreConfigGroup.setDefaultLateArrival_utils_hr(0.);
 		plansCalcScoreConfigGroup.setDefaultMarginalUtlOfWaiting_utils_hr(0.);
@@ -91,7 +91,7 @@ public class AdvancedMarginalCongestionPricingIT {
 
 		ScenarioConfigGroup scenarioConfig = new ScenarioConfigGroup();
 
-		ScoringParameters params = new ScoringParameters.Builder(plansCalcScoreConfigGroup, plansCalcScoreConfigGroup.getScoringParameters(null), scenarioConfig).build();
+		ScoringParameters params = new ScoringParameters.Builder(plansCalcScoreConfigGroup, plansCalcScoreConfigGroup.getScoringParametersOrDefault(null), scenarioConfig).build();
 
 		MarginalSumScoringFunction marginaSumScoringFunction = new MarginalSumScoringFunction(params);
 
@@ -146,7 +146,7 @@ public class AdvancedMarginalCongestionPricingIT {
 		ActivityParams activityParams = new ActivityParams("overnightActivity");
 		activityParams.setTypicalDuration(12 * 3600.);
 
-		scoringConfigGroup.addActivityParams(activityParams);
+		scoringConfigGroup.addDefaultActivityParams(activityParams);
 		scoringConfigGroup.setDefaultEarlyDeparture_utils_hr(0.);
 		scoringConfigGroup.setDefaultLateArrival_utils_hr(0.);
 		scoringConfigGroup.setDefaultMarginalUtlOfWaiting_utils_hr(0.);
@@ -154,7 +154,7 @@ public class AdvancedMarginalCongestionPricingIT {
 
 		ScenarioConfigGroup scenarioConfig = new ScenarioConfigGroup();
 
-		ScoringParameters params = new ScoringParameters.Builder(scoringConfigGroup, scoringConfigGroup.getScoringParameters(null), scenarioConfig).build();
+		ScoringParameters params = new ScoringParameters.Builder(scoringConfigGroup, scoringConfigGroup.getScoringParametersOrDefault(null), scenarioConfig).build();
 
 		MarginalSumScoringFunction marginaSumScoringFunction = new MarginalSumScoringFunction(params);
 
@@ -198,8 +198,8 @@ public class AdvancedMarginalCongestionPricingIT {
 		ActivityParams activityParams2 = new ActivityParams("lastActivityType");
 		activityParams2.setTypicalDuration(12 * 3600.);
 
-		plansCalcScoreConfigGroup.addActivityParams(activityParams1);
-		plansCalcScoreConfigGroup.addActivityParams(activityParams2);
+		plansCalcScoreConfigGroup.addDefaultActivityParams(activityParams1);
+		plansCalcScoreConfigGroup.addDefaultActivityParams(activityParams2);
 
 		plansCalcScoreConfigGroup.setDefaultEarlyDeparture_utils_hr(0.);
 		plansCalcScoreConfigGroup.setDefaultLateArrival_utils_hr(0.);
@@ -207,7 +207,7 @@ public class AdvancedMarginalCongestionPricingIT {
 		plansCalcScoreConfigGroup.setDefaultPerforming_utils_hr(6.);
 
 		ScenarioConfigGroup scenarioConfig = new ScenarioConfigGroup();
-		ScoringParameters params = new ScoringParameters.Builder(plansCalcScoreConfigGroup, plansCalcScoreConfigGroup.getScoringParameters(null), scenarioConfig).build();
+		ScoringParameters params = new ScoringParameters.Builder(plansCalcScoreConfigGroup, plansCalcScoreConfigGroup.getScoringParametersOrDefault(null), scenarioConfig).build();
 
 		MarginalSumScoringFunction marginaSumScoringFunction = new MarginalSumScoringFunction(params);
 
@@ -303,10 +303,10 @@ public class AdvancedMarginalCongestionPricingIT {
 		Assertions.assertEquals(1, moneyEvents.size(), "Wrong number of money events.");
 
 		// test if the delay is 2 seconds
-		double delay = congestionEvents.get(0).getDelay();
+		double delay = congestionEvents.getFirst().getDelay();
 		Assertions.assertEquals(2.0, delay, MatsimTestUtils.EPSILON, "Wrong delay.");
 
-		double amountFromEvent = moneyEvents.get(0).getAmount();
+		double amountFromEvent = moneyEvents.getFirst().getAmount();
 		double tripDelayDisutility = delay / 3600. * controler.getConfig().scoring().getDefaultModeParams().get(TransportMode.car).getMarginalUtilityOfTraveling() * (-1);
 		// with delay --> 70.570685898554200
 		// without delay --> 70.573360291244900
@@ -383,10 +383,10 @@ public class AdvancedMarginalCongestionPricingIT {
 		Assertions.assertEquals(1, moneyEvents.size(), "Wrong number of money events.");
 
 		// test if the delay is 2 seconds
-		double delay = congestionEvents.get(0).getDelay();
+		double delay = congestionEvents.getFirst().getDelay();
 		Assertions.assertEquals(2.0, delay, MatsimTestUtils.EPSILON, "Wrong delay.");
 
-		double amountFromEvent = moneyEvents.get(0).getAmount();
+		double amountFromEvent = moneyEvents.getFirst().getAmount();
 		double tripDelayDisutility = delay / 3600. * controler.getConfig().scoring().getDefaultModeParams().get(TransportMode.car).getMarginalUtilityOfTraveling() * (-1);
 
 		// home duration morning: 28800.
